[package]
name = "revist"
version = "0.1.0"
authors = ["Aaron Kofsky <aaronko@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/RustAudio/vst-rs" }
wmidi = "4.0.1"
rand = "0.7.3"
log = "0.4.11"
simple-logging = "2.0.2"
variant_count = "1.0.0"
derive_more = "0.99.11"
backtrace = "0.3"

# for audio filtering
biquad = "0.4.0" # { git = "https://github.com/a2aaron/biquad-rs", branch = "master" }

# for GUI
iced = { version = "0.3" }
iced_audio = "0.7" # { git = "https://github.com/a2aaron/iced_audio", branch = "main" }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch = "main" }
iced_native = "0.4.0"
iced_futures = { version = "0.3.0", features = ["async-std"] }
iced_graphics = { version = "0.2.0", features = ["canvas"] }
raw-window-handle = "0.3.3"
# rev matches iced_baseview revision
baseview = { git = "https://github.com/RustAudio/baseview", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
# because baseview doesn't reexport this
keyboard-types = "0.5.0"
# for use with iced's subscriptions
tokio = { version = "1.0.0", features = ["sync"] }

# for preset stuff
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
incremental = true
# debug = true

[lib]
crate-type = ["cdylib"]
